NodeJS binary to export WASM files.

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,5 +4,8 @@ module(
 )
 
 bazel_dep(name = "rules_cc", version = "0.1.5")
+bazel_dep(name = "aspect_rules_js", version = "2.9.2")
 bazel_dep(name = "googletest", version = "1.17.0")
 bazel_dep(name = "abseil-cpp", version = "20240722.0")
+# https://github.com/emscripten-core/emsdk/issues/1642
+bazel_dep(name = "emsdk", version = "4.0.17")
